--- a/src/app/secciones/componente3/componente3.component.html
+++ b/src/app/secciones/componente3/componente3.component.html
@@ -5,3 +5,10 @@
         <input type="button" class="btn btn-primary" value="Guardar">
     </section>
 </form>
+
+<section class="container">
+    <h3>Lista de Tareas</h3>
+    <ul>
+        <li>Prueba</li>
+    </ul>
+</section>
