--- a/src/app/secciones/componente3/componente3.component.html
+++ b/src/app/secciones/componente3/componente3.component.html
@@ -30,13 +30,12 @@
                     <input class="btn btn-primary btn-lg" type="button" value="Guardar" (click)="AgregarTarea()"/>
                 </section>
 
+                <section>
+                <h2>Lista de tarea </h2>
                 <ul *ngFor="let lista of datos">
-                    <li>{{ lista.Tarea }}</li>
-                        <ul>
-                            <li>{{lista.TxtTarea}}</li>
-                        </ul>
+                  <li>{{ lista.Tarea }} : {{ lista.Descripcion }} </li>     
                 </ul>
-            </section>
+              </section>
         </section>
         </section>
     </section>
