--- a/src/app/secciones/componente3/componente3.component.html
+++ b/src/app/secciones/componente3/componente3.component.html
@@ -1,19 +1,3 @@
-<!-- <form action="">
-    <section class="container my-4">
-        <input type="text" placeholder="Ingresa el nombre de la tarea" class="form-control my-4">
-        <textarea type="text" placeholder="Ingresa descripción de la tarea" class="form-control my-4" rows="3"></textarea>
-        <input type="button" class="btn btn-primary" value="Guardar">
-    </section>
-</form>
-
-<section class="container">
-    <h3>Lista de Tareas</h3>
-    <ul>
-        <li>Prueba</li>
-    </ul>
-</section> -->
-
-
 <section class="container py-5 h-100">
     <section class="row d-flex  align-items-center h-100">
             <section class="col-6 col-md-8 col-lg-6 col-xl-5">
@@ -31,10 +15,7 @@
                 </section>
 
                 <ul *ngFor="let lista of datos">
-                    <li>{{ lista.Tarea }}</li>
-                        <ul>
-                            <li>{{lista.TxtTarea}}</li>
-                        </ul>
+                    <li><strong>{{ lista.Tarea }}:</strong> {{ lista.TxtTarea }}</li>
                 </ul>
             </section>
         </section>
