--- a/src/app/secciones/componente3/componente3.component.html
+++ b/src/app/secciones/componente3/componente3.component.html
@@ -1,27 +1,52 @@
 <section class="container py-5 h-100">
-    <section class="row d-flex  align-items-center justify-content-center h-100">
-        <section class="col-6 col-md-8 col-lg-6 col-xl-5">
-            <section class="card shadow-2-strong" style="border-radius: 1rem">
-                <section class="card-body p-5 text-center">
-                    <h3 class="mb-5">Ingresar</h3>
-                    <section class="form-outline mb-4">
-                        <input class="form-control form-control-lg" placeholder="Ingresa nombre tarea" type="text" [(ngModel)]="tarea"/>
-                    </section>
-                    <section class="form-outline mb-4">
-                        <textarea class="form-control form-control-lg" placeholder="Ingresa Descripción" type="text" rows="3" [(ngModel)]="descripcion"></textarea>
-                    </section>
-                    <section class="pt-1 mb-4">
-                        <input *ngIf="tarea && descripcion" class="btn btn-primary btn-lg" type="button" value="Guardar" (click)="AgregarTarea()"/>
-                    </section>
-
-                    <section class="align-items-left">
-                        <h2>Lista de tarea </h2>
-                        <ul *ngFor="let lista of datos">
-                            <li><strong>{{ lista.Tarea }}:</strong> {{ lista.Descripcion }}</li>   
-                        </ul>
-                    </section>
-                </section>
-            </section>
+  <section class="row d-flex align-items-center h-100">
+    <section class="col-sm-6 d-flex justify-content-center align-items-start">
+      <section class="card shadow-2-strong" style="border-radius: 1rem">
+        <section class="card-body p-5 text-center">
+          <h3 class="mb-5">Ingresar</h3>
+          <section class="form-outline mb-4">
+            <input class="form-control form-control-lg" placeholder="Ingresa nombre tarea" type="text" [(ngModel)]="tarea"/>
+          </section>
+          <section class="form-outline mb-4">
+            <textarea class="form-control form-control-lg" placeholder="Ingresa Descripción" type="text" rows="3" [(ngModel)]="descripcion"></textarea>
+          </section>
+          <section class="pt-1 mb-4">
+            <input class="button" type="button" value="Guardar" (click)="AgregarTarea()"/>
+          </section>
+          <p *ngIf="resultado == true; else error"></p>
+          <ng-template #error>
+            <p style="color: red; font-weight: bold">{{ mensaje }}</p>
+          </ng-template>
         </section>
+      </section>
     </section>
+    <section class="col-sm-6 d-flex justify-content-center align-items-start">
+      <section class="card shadow-2-strong" style="border-radius: 1rem">
+        <section class="card-body p-5 text-center">
+          <h2 class="mb-5">Lista de tarea</h2>
+          <table class="table table-hover-ligth border border-dark 2">
+            <thead>
+              <tr>
+                <th>Item</th>
+                <th>Tarea</th>
+                <th>Descripción</th>
+                <th>Acciones</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let fila of datos; let i = index">
+                <td>{{ i + 1 }}</td>
+                <td>{{ fila.Tarea }}</td>
+                <td>{{ fila.Descripcion }}</td>
+                <td>
+                  <button class="btn btn-danger" value="{{ 1 }}" (click)="Eliminar(i)">X</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+      </section>
+    </section>
+  </section>
 </section>
+
