--- a/src/app/secciones/componente2/componente2.component.html
+++ b/src/app/secciones/componente2/componente2.component.html
@@ -1,6 +1,5 @@
-<footer class="bg-dark text-white">
-    <section class="container py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+<footer class="bg-dark text-white px-1">
+        <ul class="nav justify-content-center border-bottom">
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
@@ -8,5 +7,4 @@
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
         </ul>
         <p class="text-center text-muted">© 2022 Company, Inc</p>
-    </section>
 </footer>
