--- a/src/app/secciones/componente3/componente3.component.html
+++ b/src/app/secciones/componente3/componente3.component.html
@@ -1,5 +1,5 @@
 <section class="container py-5 h-100">
-  <section class="row d-flex align-items-center h-100">
+  <section class="row d-flex h-100">
     <section class="col-sm-6 d-flex justify-content-center align-items-start">
       <section class="card shadow-2-strong" style="border-radius: 1rem">
         <section class="card-body p-5 text-center">
@@ -20,7 +20,7 @@
         </section>
       </section>
     </section>
-    <section class="col-sm-6 d-flex justify-content-center align-items-start">
+    <section class="col-sm-6 d-flex justify-content-center">
       <section class="card shadow-2-strong" style="border-radius: 1rem">
         <section class="card-body p-5 text-center">
           <h2 class="mb-5">Lista de tarea</h2>
