--- a/src/app/secciones/componente1/componente1.component.html
+++ b/src/app/secciones/componente1/componente1.component.html
@@ -1,5 +1,5 @@
-<header class="my-2 px-1">
-    <section class="image__containercol-12 d-flex align-items-center bg-dark text-white" style="border-radius: 14px">
+<header class="my-1 px-1">
+    <section class="d-flex align-items-center bg-dark text-white" style="border-radius: 14px">
         <img src="assets/logo.webp" alt="angular" style="width: 70px;"/>
         <h3>App Tareas</h3>
     </section>
