--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
-@import url("../node_modules/bootstrap/dist/css/bootstrap.min.css") 
+
+main {
+    min-height: calc(100vh - 264px);
+    overflow-x: hidden;
+}
+
+footer {
+    width: 100%;
+    height: 194px;
+}
