--- a/src/app/secciones/componente4/componente4.component.html
+++ b/src/app/secciones/componente4/componente4.component.html
@@ -17,6 +17,7 @@
                     <td>{{ fila.descripcion }}</td>
                     <td>
                         <button class="btn btn-danger" value="{{ 1 }}" (click)="Eliminar(i)">X</button>
+                        <button class="btn btn-success" (click)="Terminado(i)">X</button>
                     </td>
                 </tr>
             </tbody>
