Función Tachar Implementada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-componente1></app-componente1>
+<app-componente1></app-componente1> <!-- Header -->
 
-<app-componente3></app-componente3>
+<app-componente3></app-componente3> <!-- Main -->
 
-<app-componente2></app-componente2>
+<app-componente2></app-componente2> <!-- Footer -->
