--- a/src/app/secciones/componente4/componente4.component.css
+++ b/src/app/secciones/componente4/componente4.component.css
@@ -16,6 +16,19 @@ thead {
     color:white
 }
 
+i {
+    cursor: pointer;
+}
+
+i:first-child {
+    margin-right: 10px;
+    color: red;
+}
+
+i:last-child {
+    color: #28a745;
+}
+
 .tachado {
     text-decoration: line-through;
 }
